@@ -1,4 +1,10 @@
 2006-08-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* include/DialogFeatures.h,
+	  src/DialogFeatures.cc: added legend (#353104)
+	* src/fat32.cc: added FIXME
+
+2006-08-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/ntfs.cc: replaced ntfscluster with ntfsresize (see #350789)
 
